# SOLO12_SDK

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.m  README.md  build.yml
.github/workflows/: build-test.yml  build.yml
data/: bezier_velocity_0.5_step_period_1.0_HZ_1000.csv  gait_1000hz_2step_per_sec.csv  joint_trajectory_jan_23.csv  towr_solo12_traj.csv  traj.csv
data/archive/: bezier_velocity_0.5_step_period_1.0_HZ_1000.csv  gait.csv  gait_1000hz_1step_per_sec.csv  towr_traj_cmode_torque.csv
examples/: example.cpp  example_pd.cpp
include/: ETHERNET_manager.h  ETHERNET_types.h  Link_manager.h  Link_types.h  MotorDriver.h  commander.hpp  cxxopts.hpp  define.h  interface.h  matrix_rw.hpp  motor.h  motor_driver.h  protocol.h  utils.h
include/commander/: clinfo.hpp  commander.hpp  config.hpp  dummy_interface.hpp  timing_stats.hpp  types.hpp  utils.hpp  win32_compatibility.hpp
include/master_board_sdk/: master_board_interface.h
include/matrix_rw/: reader.hpp  types.hpp  writer.hpp
include/traj_track/: clinfo.hpp  interface.hpp  timer.hpp
scripts/: calibration.py  init_exes.sh  run.cpp  set_permissions.sh  sync_from_shuksan.sh  sync_to_shuksan.sh  test_run.cpp
src/: ETHERNET_types.cpp  Link_manager.cpp  MotorDriver.cpp  interface.cpp  motor.cpp  motor_driver.cpp  utils.cpp
src/commander/: clinfo.cpp  commander.cpp  commander.cppx  main.cpp  main.cppx  timing_stats.cpp  utils.cpp
src/master_board_sdk/: ESPNOW_manager.cpp  Link_manager.cpp  master_board_interface.cpp  motor.cpp  motor_driver.cpp
src/traj_track/: clinfo.cpp  interface.cpp  main.cpp
